frontend/src/screens/Home/Home.module.css
.gradient {
    background: #1e3c72;
    background: -webkit-linear-gradient(to right, #2a5298, #1e3c72);
    background: linear-gradient(to right, #2a5298, #1e3c72);

    height: 100vh;
}

.image {
    border: 5px solid red;
    position: absolute;
    z-index: 0;
    top: 10%;
    right: -7%;
    overflow: hidden;

}

.homeIntro {
    position: relative;
    z-index: 1;
    border: 4px solid blue;
}

@media (max-width: 1000px) {
    .image {
        width: 180px;
        border: 1px solid blue;
    }
}

/*
.gradient {
    background: #1e3c72;
    background: url(../../assets/backgroundlionbig.svg);
    background: url(../../assets/backgroundlionbig.svg);
    background-size: cover;

    height: 100vh;
    width: 100vw;
}
*/

